Add PR assignee as input to trigger release workflow

--- a/.github/workflows/trigger_release_creation.yml
+++ b/.github/workflows/trigger_release_creation.yml
@@ -3,6 +3,10 @@ name: Trigger Release Creation
 on:
   workflow_dispatch:
     inputs:
+      prassignee:
+        description: 'User to assign PR to (defaults to current user)'
+        required: false
+        type: string
       isfinalreleasebuild:
         description: 'Build final release build? (if unchecked, this builds a pre-release)'
         required: true
@@ -18,6 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       isprereleasebuild: ${{ inputs.isfinalreleasebuild != true }}
+      prassignee: ${{ inputs.prassignee || github.actor }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -65,5 +70,5 @@ jobs:
           pr_title: 'Release v${{ steps.version-upgrade.outputs.newversion }}'
           pr_body: Updates version to v${{ steps.version-upgrade.outputs.newversion }}
           github_token: ${{ secrets.DEVBOT_GH_TOKEN }}
-          pr_assignee: '${{ github.actor }}'
+          pr_assignee: '${{ env.prassignee }}'
           pr_draft: false
