--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   "deprecated": false,
   "description": "ProcessHub SDK for JavaScript/TypeScript",
   "dependencies": {
+    "axios": "^1.5.1",
     "base-64": "^1.0.0",
     "bpmn-moddle": "^8.0.1",
-    "cross-fetch": "^4.0.0",
     "joi": "^17.10.2",
     "lodash": "^4.17.21",
     "luxon": "^3.4.3",
