--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "git",
     "url": "git://github.com/roXtra/processhub-sdk.git"
   },
-  "version": "9.90.0-0",
+  "version": "9.90.0-1",
   "author": {
     "name": "ROXTRA",
     "email": "service@roxtra.com",
@@ -21,7 +21,7 @@
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
     "all": true,
-    "check-coverage": true,
+    "check-coverage": false,
     "branches": 5,
     "lines": 10,
     "functions": 5,
