--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "scripts": {
     "build": "rimraf ./lib && tsc && npm run copytypings",
     "test": "npm run build && npm run lint && npm run testcoverage",
-    "lint": "eslint --ext .ts,.tsx ./src",
+    "lint": "eslint ./src",
     "testall": "mocha ./lib/**/*.test.js --exit --timeout 10000 --recursive",
     "testcoverage": "nyc --reporter=lcov --reporter=text-summary npm run testall",
     "copytypings": "copyfiles -u 1 \"src/**/*.d.ts\" lib && copyfiles -u 1 \"src/*.d.ts\" lib && copyfiles -u 1 src/process/types/index.d.ts lib",
@@ -69,8 +69,6 @@
     "@types/react": "^18.3.1",
     "@types/sqlstring": "^2.3.2",
     "@types/utf8": "^3.0.3",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
     "chai": "^4.4.1",
     "chai-exclude": "^2.1.0",
     "copyfiles": "^2.4.1",
@@ -78,14 +76,18 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-deprecation": "^2.0.0",
+    "eslint-plugin-lodash": "^7.4.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.1.0",
     "mocha": "^10.4.0",
     "nyc": "^15.1.0",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "ts-mocha": "^10.0.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^7.8.0"
   },
   "files": [
     "index.js",
