--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -10,6 +10,6 @@
   },
   "rangeStrategy": "bump",
   "prCreation": "not-pending",
-  "assignees": ["@BCaspari", "@MHofmann-rossmanith", "@VFritsch", "@LGrueneberg-R"],
+  "assignees": ["@BCaspari", "@VFritsch", "@LGrueneberg-R"],
   "assigneesSampleSize": 1
 }
