--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noEmit": false,
     "strict": true,
     "jsx": "react-jsx",
-    "lib": ["ES2022", "dom", "ESNext.Disposable"]
+    "lib": ["ES2022", "dom"]
   },
   "include": ["./src/**/*"],
   "exclude": ["lib", "tsc_out", "node_modules"]
