--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "chai-exclude": "^3.0.1",
     "copyfiles": "^2.4.1",
     "cross-env": "^10.1.0",
-    "eslint": "^9.39.2",
+    "eslint": "9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-lodash": "^8.0.0",
     "eslint-plugin-no-only-tests": "^3.3.0",
